[1314] Merge all diagram descriptions into one
Bug: https://github.com/eclipse-syson/syson/issues/1314
Signed-off-by: Axel RICHARD <axel.richard@obeo.fr>